--- a/hue.css
+++ b/hue.css
@@ -19,15 +19,25 @@
 }
 
 :any-link:active {
-  color: coral;
-}
-
-b {
-  text-shadow:
-    0 1ch 0 violet,
-    0 -1ch 0 palevioletred;
+  color: mistyrose;
 }
 
 p {
   background-image: conic-gradient(darkviolet 20%, blueviolet 80%);
+}
+
+@media (orientation: landscape) {
+  b {
+    text-shadow:
+      0 1ch 0 violet,
+      0 -1ch 0 palevioletred;
+  }
+}
+
+@media (orientation: portrait) {
+ b {
+  text-shadow:
+    1ch 0 0 violet,
+    -1ch 0 0 palevioletred;
+} 
 }
